<?xml version="1.0" encoding="utf-8"?>
<resources>   
    <string name="app_name">StringTools</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="LogoImage">LogoImage</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="login">Login</string>
	<string name="new_user">New user? Register here</string>
	<string name="URL">http://www.stringtools.it/android/index.php</string>
	<string name="no_active">User not active</string>
	<string name="wrong_login">Incorrect username/password</string>
	<string name="Welcome">Welcome</string>
    <string name="menu_open"></string>
    <string name="menu_close"></string>    
    <string name="menu_logout">Logout</string>
    <string name="personal_data">Personal Data</string>
    <string name="email">Email Address</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="telephone">Telephone</string>
	<string name="mobile_telephone">Mobile Telephone</string>
	<string name="piva">Partita IVA</string>
	<string name="fax">FAX</string>
	<string name="stringing_cost">Stringing Cost</string>
	<string name="weight_unit">Weight Unit</string>
	<string name="currency_unit">Currency Unit</string>
	<string name="action_save">Save</string>
	<string name="wait_save">Save data</string>
	<string name="wait_load">Load data</string>
	<string name="list_customers">List Customers</string>
	<string name="wrong_save">Error save data</string>
	<string name="attention">Attention</string>
	<string name="edit_customer">Edit data</string>
	<string name="new_customer">New customer</string>
	<string name="list_racquets">List racquets</string>
	<string name="serial">Seriale</string>	
	<string name="BrandName">Brand Name</string>
	<string name="Pattern">Pattern</string>
	<string name="Model">Model</string>
	<string name="HeadSize">Head Size</string>
	<string name="Length">Length</string>
	<string name="GripSize">Grip Size</string>
	<string name="WeightUnstrung">Weight Unstrung</string>
	<string name="WeightStrung">Weight Strung</string>
	<string name="Balance">Balance</string>
	<string name="Swingweight">Swingweight</string>
	<string name="Stiffness">Stiffness</string>
	<string name="BeamWidth">Beam Width</string>
	<string name="DateBuy">Date Buy</string>
	<string name="Note">Note</string>
	<string name="SetDate">Set Date</string>
	<string name="inorcm">(in or cm)</string>
	<string name="ozorgr">(oz or gr)</string>
	<string name="cm">(cm)</string>
	<string name="onlyread">**Only read</string>
	<string name="editcustomerracquet">Edit data customer racquet</string>
	<string name="cancel">Cancel</string>
	<string name="delete_racquet">Confirm delete racquet?</string>
	<string name="select_racquet_toadd">Select racquet to add</string>
	<string name="search_racquet_hint">Search racquets..</string>
	<string name="action_search">Search</string>
	<string name="newcustomerracquet">New customer racquet</string>
	<string name="list_brands">List Brands</string>
	<string name="brand">Brand</string>
	<string name="edit_brand">Edit brand</string>
	<string name="new_brand">New brand</string>
	<string name="list_grips">List grips</string>
	<string name="grips">Grips</string>
	<string name="edit_grip">Edit grip</string>
	<string name="new_grip">New grip</string>
	<string name="cost">Cost</string>
	<string name="list_overgrips">List overgrips</string>
	<string name="overgrips">Overgrips</string>
	<string name="edit_overgrip">Edit overgrip</string>
	<string name="new_overgrip">New overgrip</string>
	<string name="edit_racquet">Edit racquet</string>
	<string name="new_racquet">New racquet</string>
	<string name="edit_string">Modifica string</string>
	<string name="new_string">Nuova string</string>
	<string name="list_strings">Lista strings</string>
	
	<string name="code">Code</string>
	<string name="Gauges">Gauges</string>
	<string name="ExactGauges">Exact Gauges</string>
	<string name="StringType">Type</string>
	
</resources>
