<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:background="#e2e2e2" >
	    	  <!--  Username  -->
	          <TextView 
	              	android:id="@+id/lblusername"
	              	android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:textColor="#666666"
	                android:text="@string/username"/>
	          <EditText 
	              	android:id="@+id/username"
	              	android:inputType="text"
	              	android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="5dip"
	                android:layout_marginBottom="20dip"
	                android:singleLine="true"/>
	          <!--  Password  -->
	          <TextView 
	              	android:id="@+id/lblpassword"
	              	android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:textColor="#666666"
	                android:text="@string/password"/>
	          <EditText 
	              	android:id="@+id/password"
	              	android:inputType="textPassword"
	              	android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="5dip"
	                android:layout_marginBottom="20dip"
	                android:singleLine="true"/>
	    	  <!--  Email  -->
	          <TextView android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:textColor="#666666"
	                android:text="@string/email"/>
	          <EditText 
	              	android:id="@+id/email"
	              	android:inputType="textEmailAddress"
	              	android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="5dip"
	                android:layout_marginBottom="20dip"
	                android:singleLine="true"/>
	          <!--  name  -->
	          <TextView android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:textColor="#666666"
	                android:text="@string/name"/>
	          <EditText 
	              	android:id="@+id/name"
	              	android:inputType="text"
	              	android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="5dip"
	                android:layout_marginBottom="20dip"
	                android:singleLine="true"/>
	          <!--  surname  -->
	          <TextView android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:textColor="#666666"
	                android:text="@string/surname"/>
	          <EditText 
	              	android:id="@+id/surname"
	              	android:inputType="text"
	              	android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="5dip"
	                android:layout_marginBottom="20dip"
	                android:singleLine="true"/>
	          <!--  telephone  -->
	          <TextView android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:textColor="#666666"
	                android:text="@string/telephone"/>
	          <EditText 
	              	android:id="@+id/telephone"
	              	android:inputType="phone"
	              	android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="5dip"
	                android:layout_marginBottom="20dip"
	                android:singleLine="true"/>
	          <!--  mobile telephone  -->
	          <TextView android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:textColor="#666666"
	                android:text="@string/mobile_telephone"/>
	          <EditText 
	              	android:id="@+id/mobile_telephone"
	              	android:inputType="phone"
	              	android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="5dip"
	                android:layout_marginBottom="20dip"
	                android:singleLine="true"/>
	          <!--  piva  -->
          <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#666666"
                android:text="@string/piva"/>
          <EditText 
              	android:id="@+id/piva"
              	android:inputType="text"
              	android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:singleLine="true"/>
          <!--  fax  -->
          <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#666666"
                android:text="@string/fax"/>
          <EditText 
              	android:id="@+id/fax"
              	android:inputType="text"
              	android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:singleLine="true"/>
          <!--  stringing cost  -->
          <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#666666"
                android:text="@string/stringing_cost"/>
          <EditText 
              	android:id="@+id/stringing_cost"
              	android:inputType="numberDecimal"
              	android:digits="0123456789."
              	android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:singleLine="true"/>
	</LinearLayout>
</ScrollView>