<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:background="#e2e2e2" >
	    	  <!--  BrandName  -->
	          <TextView 
	              	android:id="@+id/lblBrandName"
	              	android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:textColor="#666666"
	                android:text="@string/BrandName"/>
	          <Spinner android:id="@+id/spinBrandName"
	       		android:layout_width="fill_parent"
	       		android:layout_height="wrap_content"/>
	          <!--  Model  -->
	          <TextView 
	                android:id="@+id/lblModel"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:textColor="#666666"
	                android:text="@string/Model"/>
	          <EditText 
	              	android:id="@+id/Model"
	              	android:inputType="text"
	              	android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="5dip"
	                android:layout_marginBottom="20dip"
	                android:singleLine="true"/>	 
	          <!--  Code  -->
	          <TextView 
	                android:id="@+id/lblCode"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:textColor="#666666"
	                android:text="@string/code"/>
	          <EditText 
	              	android:id="@+id/Code"
	              	android:inputType="text"
	              	android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="5dip"
	                android:layout_marginBottom="20dip"
	                android:singleLine="true"/>	     
	          <!--  gauges  -->
	          <TextView 
	              	android:id="@+id/lblGauges"
	              	android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:textColor="#666666"
	                android:text="@string/Gauges"/>
	          <Spinner android:id="@+id/spinGauges"
	       		android:layout_width="fill_parent"
	       		android:layout_height="wrap_content"/>
	          <!--  exact gauges  -->
	          <TextView 
	                android:id="@+id/lblExactGauges"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:textColor="#666666"
	                android:text="@string/ExactGauges"/>
	          <EditText 
	              	android:id="@+id/ExactGauges"
	              	android:inputType="numberSigned"
	              	android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="5dip"
	                android:layout_marginBottom="20dip"
	                android:singleLine="true"/>
	          <!--  string type  -->
	          <TextView 
	              	android:id="@+id/lblStringType"
	              	android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:textColor="#666666"
	                android:text="@string/StringType"/>
	          <Spinner android:id="@+id/spinStringType"
	       		android:layout_width="fill_parent"
	       		android:layout_height="wrap_content"/>
	          <!--  price  -->
	          <TextView 
	                android:id="@+id/lblPrice"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:textColor="#666666"
	                android:text="@string/cost"/>
	          <EditText 
	              	android:id="@+id/Price"
	              	android:inputType="numberSigned"
	              	android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="5dip"
	                android:layout_marginBottom="20dip"
	                android:singleLine="true"/>
	</LinearLayout>
</ScrollView>