<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:background="#e2e2e2" >
	    	  <!--  BrandName  -->
	          <TextView 
	              	android:id="@+id/lblBrandName"
	              	android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:textColor="#666666"
	                android:text="@string/BrandName"/>
	          <Spinner android:id="@+id/spinBrandName"
	       		android:layout_width="fill_parent"
	       		android:layout_height="wrap_content"/>
	    	  <!--  model  -->
	          <TextView 
	              	android:id="@+id/lblModel"
	              	android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:textColor="#666666"
	                android:text="@string/Model"/>
	          <EditText 
	              	android:id="@+id/model"
	              	android:inputType="text"
	              	android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="5dip"
	                android:layout_marginBottom="20dip"
	                android:singleLine="true"/> 
	            <!--   cost  -->
          		<TextView android:layout_width="fill_parent"
                	android:layout_height="wrap_content"
                	android:textColor="#666666"
                	android:text="@string/cost"/>
	          <EditText 
	              	android:id="@+id/cost"
	              	android:inputType="numberDecimal"
	              	android:digits="0123456789."
	              	android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="5dip"
	                android:layout_marginBottom="20dip"
	                android:singleLine="true"/>   
	            <!--  Note  -->
	          <TextView 
	                android:id="@+id/lblNote"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:textColor="#666666"
	                android:text="@string/Note"/>
	          <EditText 
	              	android:id="@+id/Note"
	              	android:inputType="textMultiLine"
	              	android:lines="8"
	              	android:minLines="6"
	              	android:scrollbars="vertical"
	              	android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                />       
	</LinearLayout>
</ScrollView>